# SPDX-License-Identifier: GPL-2.0-or-later
set(BASH_COMPLETIONS)
set(BASH_COMPLETIONS ${BASH_COMPLETIONS} ulpatch ulpinfo ulpconfig)
if (CONFIG_BUILD_ULFTRACE)
  set(BASH_COMPLETIONS ${BASH_COMPLETIONS} ulftrace)
endif()
if (CONFIG_BUILD_ULTASK)
  set(BASH_COMPLETIONS ${BASH_COMPLETIONS} ultask)
endif()

file(GLOB FILES ${BASH_COMPLETIONS})

add_custom_target(bash_completion DEPENDS ${BASH_COMPLETIONS})
install(FILES ${BASH_COMPLETIONS} DESTINATION ${CMAKE_INSTALL_BASH_COMPLETION})
